--- a/server_error.html
+++ b/server_error.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Server Internal Error</title>
     <link rel="stylesheet" href="./style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
   </head>
   <body>
     <nav>
@@ -16,7 +17,7 @@
             src="https://mybebsa.com/static/media/logo.e5383590.svg"
           />
         </a>
-        <a href="https://www.mybebsa.com" class="mybebsa_brand">Mybebsa</p>
+        <a href="https://www.mybebsa.com" class="mybebsa_brand">Mybebsa</a>
       </div>
     </nav>
 
